update essay example

--- a/dot_skel/.skel/essay/skeleton/NAME.tex
+++ b/dot_skel/.skel/essay/skeleton/NAME.tex
@@ -1,21 +1,19 @@
 \\documentclass[letterpaper,11pt]\{article\}
 \\usepackage\{adforn\}
 \\usepackage\{lettrine\}
-\\usepackage\{fontspec\}
+\\usepackage\{listings\}
 \\usepackage\{enumitem\}
-\\setmainfont\{Hoefler Text\}
+\\usepackage\{fontspec\}
+\\defaultfontfeatures\{Ligatures=TeX\}
+\\setmainfont\{Adobe Garamond Pro\}
 \\def\\blankwith#1\{\\par\\nobreak\\bigskip\\hbox to \\hsize\{\\hfill\\kern.5em\\lower.5ex\\hbox\{#1\}\\kern.5em\\hfill\}\\bigskip\}
 
 \\author\{{AUTHOR}\}
+\\date\{\}
 \\title\{{TITLE}\}
 
 \\begin\{document\}
 \\maketitle
-
-\\begin\{abstract\}
-\\end\{abstract\}
-
-\\blankwith\{\\adforn\{49\}\}
 
 \\section*\{\}
 \\lettrine\{L\}orem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur cursus dignissim tempor. In tempus gravida viverra. Phasellus non augue ac quam sagittis tincidunt. Ut in fermentum leo. Sed malesuada tempor sapien, lacinia lobortis massa adipiscing quis. Nullam in rhoncus dui. Sed et massa tortor, id bibendum tortor.
@@ -29,5 +27,6 @@ Nullam commodo velit ut sem blandit vehicula. In a metus leo, eu congue augue. N
   \\item Vivamus porttitor massa eget arcu varius et aliquet quam pulvinar.
   \\item Vivamus suscipit dui et leo ultrices sollicitudin.
 \\end\{itemize\}
+
 \\blankwith\{\\adforn\{49\}\}
 \\end\{document\}
